# smart-invest

./: .gitignore  README.rst  setup.cfg  setup.py
src/smart_invest/: settings.py  sxxp.py
tests/: keys.json  quickstart.py  test_sxxp600.py
tests/test_data/: bmw_cf.txt  total_cf.txt
