[metadata]
name = Smart-Invest
# Version needs regex in setup.py.
url = https://element83.com.mt
project_urls =
    Documentation = https://github.com/netsamir/investment
    Code = https://github.com/netsamir/investment
    Issue tracker = https://github.com/netsamir/investment/issues
license = GPLv3+
license_files = LICENSE.rst
author = Samir Sadek
author_email = samir.sadek@element83.com.mt
maintainer = Element83
maintainer_email = support@element83.com.mt
description = Assistance for investment decision taking
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src
